# motion_embedding

./: .gitignore  Cargo.toml  LIBRARY_DEEP_DIVE.md  README.md  VARIANCE_ANALYSIS_REPORT.md  test_embeddings.json
python/: analyze_embeddings.py  embeddings.json  pyproject.toml
src/: config.rs  decoder.rs  distance.rs  embedding.rs  encoder.rs  error.rs  lib.rs  streaming.rs  validation.rs
src/math/: bivector.rs  compression.rs  fft.rs  linalg.rs  mod.rs
tests/: export_embeddings.rs  round_trip.rs
