[package]
name = "motion_embedding"
version = "0.1.0"
edition = "2021"
description = "Range-balanced motion/trajectory embedding for ML applications"
license = "MIT"
readme = "README.md"
repository = "https://github.com/komorebi/motion_embedding"
keywords = ["embedding", "trajectory", "motion", "ml", "navigation"]
categories = ["science", "algorithms"]

[dependencies]
rustfft = "6.2"
nalgebra = "0.33"
num-complex = "0.4"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
approx = "0.5"
proptest = "1.0"
criterion = "0.5"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]

[[bench]]
name = "encoding"
harness = false

[profile.release]
lto = true
codegen-units = 1
